<resources>
    <string name="app_name">Rent a Car</string>
    <string name="pickup_label">Where do you want to pick-up your car?</string>
    <string name="return_label">Where do you want to return your car?</string>
    <string name="return_same_pickup_location">Return in the same pick-up location?</string>
    <string name="continue_label">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="near_you">Near you</string>
    <string name="use_my_current_location">Use my current location</string>
    <string name="select_agency">Search for locations</string>
    <string name="pickup_date">Select the pick-up date</string>
    <string name="return_date">Select the return date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="cancel">Cancel</string>
    <string name="return_date_sample">Ter, 16 Fevereiro 2021, 14:30</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_reservations">My Reservations</string>
    <string name="pickup_hour">Select the pick-up hour</string>
    <string name="return_hour">Select the return hour</string>
    <string name="summary">Summary</string>
    <string name="home">Home</string>
    <string name="reservations">Reservations</string>
    <string name="profile">Profile</string>


</resources>