<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:label="@string/app_name"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="com.localizalabsacademy.mobile.rentacar.ui.StartFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_start">
        <action
            android:id="@+id/action_startFragment_to_selectAgencyFragment"
            app:destination="@id/selectAgencyFragment" />
        <action
            android:id="@+id/action_startFragment_to_selectDateFragment"
            app:destination="@id/selectDateFragment" />
        <action
            android:id="@+id/action_startFragment_to_reservationsFragment"
            app:destination="@id/reservationsFragment" />
        <action
            android:id="@+id/action_startFragment_to_summaryFragment"
            app:destination="@id/summaryFragment" />
    </fragment>
    <fragment
        android:id="@+id/selectAgencyFragment"
        android:name="com.localizalabsacademy.mobile.rentacar.ui.SelectAgencyFragment"
        android:label="@string/select_agency"
        tools:layout="@layout/fragment_select_agency">
        <action
            android:id="@+id/action_selectAgencyFragment_to_startFragment"
            app:destination="@id/startFragment" />
    </fragment>
    <fragment
        android:id="@+id/selectDateFragment"
        android:name="com.localizalabsacademy.mobile.rentacar.ui.SelectDateFragment"
        android:label="@string/pickup_date">
        <action
            android:id="@+id/action_selectDateFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_selectDateFragment_to_selectHourFragment"
            app:destination="@id/selectHourFragment" />
    </fragment>
    <fragment
        android:id="@+id/selectHourFragment"
        android:name="com.localizalabsacademy.mobile.rentacar.ui.SelectHourFragment"
        android:label="@string/pickup_hour">
        <action
            android:id="@+id/action_selectHourFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/reservationsFragment"
        android:name="com.localizalabsacademy.mobile.rentacar.ui.ReservationsFragment"
        android:label="@string/my_reservations"
        tools:layout="@layout/fragment_reservations">
        <action
            android:id="@+id/action_reservationsFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/summaryFragment"
        android:name="com.localizalabsacademy.mobile.rentacar.ui.SummaryFragment"
        android:label="@string/summary" />
</navigation>