<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.StartFragment">

    <data>

        <variable
            name="startFragment"
            type="com.localizalabsacademy.mobile.rentacar.ui.StartFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_pickup"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:hint="@string/pickup_label"
                app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/start_tiet_pickup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                android:hint="@string/return_label"
                app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/start_tiet_return"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/start_cb_return_same_pickup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:checked="true"
                android:text="@string/return_same_pickup_location" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/start_btn_continue"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:text="@string/continue_label"
                app:cornerRadius="@dimen/text_margin" />


        </LinearLayout>


    </ScrollView>
</layout>